--- a/src/cli/Makefile
+++ b/src/cli/Makefile
@@ -1,14 +1,14 @@
 CC=gcc
 CFLAGS=-Wall -g 
 CFLAGS += -I ../socket
-LDFLAGS= -L../socket -lc
+LDFLAGS= -L../socket
 LIBS= -lsocketmgmt # this is similar to -lc which translates to libc
 TARGET= ftpcli
 
 BINS = ftpcli.o $(TARGET)
 
 ftpcli.o: myftp_skel.c 
-	$(CC) $(CFLAGS) -c $^ -o ftpcli.o 
+	$(CC) $(CFLAGS) -c $^ -o $@
 
 
 $(TARGET): ftpcli.o
