--- a/src/cli/Makefile
+++ b/src/cli/Makefile
@@ -1,18 +1,19 @@
-CC=gcc
-CFLAGS=-Wall -g 
+CC := gcc
+CFLAGS := -Wall -g 
 CFLAGS += -I ../socket
-LDFLAGS= -L../socket
-LIBS= -lsocketmgmt # this is similar to -lc which translates to libc
-TARGET= ftpcli
+LDFLAGS := -L../socket
+LIBS := -lsocketmgmt # this is similar to -lc which translates to libc
 
-BINS = ftpcli.o $(TARGET)
+TARGET := ftpcli
+
+BINS := ftpcli.o $(TARGET)
 
 ftpcli.o: myftp_skel.c 
 	$(CC) $(CFLAGS) -c $^ -o $@
 
 
 $(TARGET): ftpcli.o
-	$(CC) $(CFLAGS) -o $(TARGET) $^ $(LIBS) $(LDFLAGS)
+	$(CC) $(CFLAGS) -o ../../bin/$(TARGET) $^ $(LIBS) $(LDFLAGS)
 
 clean: 
 	rm -rf $(BINS)
