--- a/src/srv/Makefile
+++ b/src/srv/Makefile
@@ -1,15 +1,18 @@
-CC=gcc
-CFLAGS=-Wall -g
-CFLAGS+= -I../socket
-LIBS= -lsocketmgmt
-LDFLAGS= -L../socket
-BINS= ftpsrv.o ftpsrv
+CC := gcc
+CFLAGS :=-Wall -g
+CFLAGS += -I../socket
+LIBS := -lsocketmgmt
+LDFLAGS := -L../socket
+BINS := ftpsrv.o ftpsrv
+
+BIN_DIR := $(BIN_DIR)
+
 
 ftpsrv.o: myftpsrv_skel.c 
 	$(CC) $(CFLAGS) -c $^ -o $@
 
 ftpsrv: ftpsrv.o
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBS) $(LDFLAGS)
+	$(CC) $(CFLAGS) -o ../../bin/$@ $^ $(LIBS) $(LDFLAGS)
 
 all: $(BINS)
 
